--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koktající copywriter Vojtěch Hulinský</title>
   </head>
-  <body>
+  <body style="visibility: hidden">
+  <script>0</script>
     <div id="app"></div>
     <script type="module" src="./src/main.ts"></script>
+    <script>
+      // Helper function
+      let domReady = (cb) => {
+        document.readyState === 'interactive' || document.readyState === 'complete'
+          ? cb()
+          : document.addEventListener('DOMContentLoaded', cb);
+      };
+
+      domReady(() => {
+        // Display body when DOM is loaded
+        document.body.style.visibility = 'visible';
+      });
+    </script>
   </body>
 </html>
